# applied-planning

./: .gitignore  README.md  pyproject.toml
docs/: visual_servoing_guide.md  xbox_teleoperation_guide.md
examples/: camera_integration_example.py  realtime_visual_servoing.py
notebooks/: README.md  cube_planning.ipynb  cube_planning.py  movement_test.ipynb  planning.ipynb  sim_and_real_comparison.ipynb  sim_vs_real_example.py  test_cube_pointing_env.py  train_cube_pointing.py  ufactory_lite6_control.ipynb  visualize_pointing.py  visualize_pointing_with_plots.py  xbox_control.ipynb
scripts/: demo_cartesian_planning.py  demo_cube_pointing_env.py  demo_path_planning.py  fetch_menagerie_lite6.py  generate_xbox_notebook.py  run_task.py  send_to_ufactory.py  test_gripper_control.py  test_real_robot.py  train_policy.py
src/applied_planning/: __init__.py
src/applied_planning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/applied_planning/control/: __init__.py  controllers.py  kinematics.py  planners.py  visual_servoing.py
src/applied_planning/envs/: __init__.py  lite6_cube_pointing_env.py  lite6_cube_stacking_env.py  lite6_pick_place_env.py
src/applied_planning/hardware/: __init__.py  xarm_lite6_adapter.py
src/applied_planning/io/: __init__.py  ros2_adapter.py
src/applied_planning/perception/: __init__.py  adapter.py
src/applied_planning/testing/: cube_pointing_test.py  cube_stacking_test.py
src/applied_planning/training/: cube_pointing.ipynb  cube_stacking.ipynb
testing/: movement_test.ipynb  realsense.py
tests/: test_env_smoke.py
(+5 files in other folders)
